--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Page Title</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="index.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
