added web development description

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@ Contact Me          </a>
         </div>
         <div class="main">
 <p>My name is Shane. I am a web app developer that is knowledgeable in the
-requirements gathering, iterative software development, implementation, and testing processes.  I am proficient in JavaScript
-HTML, CSS, Java, and C#. I am looking for an entry-level Web Developer position to develop my skills.</p>
+requirements gathering, iterative software development, implementation, and testing processes. I am looking for an entry-level Web Developer position to develop my skills.</p>
         <h4>Web development</h4>
-        <p>fadfajla</p>  
+        <p>I have been designing and implementing web applications for 2 years. I am proficient in JavaScript,
+React JS, Node.js, HTML, CSS and object oriented programming in Java, C# and C.</p>  
       </div>
       
       </div>
