--- a/index.html
+++ b/index.html
@@ -139,12 +139,10 @@ React JS, Node.js, HTML, CSS and object oriented programming in Java, C# and C.<
               <h3>
                 C
               </h3>
-
-
             </div>
             <div>
               <h3>
-                JavaScript
+                Linux
               </h3>
             </div>
             <div>
