--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           </div>
           <div class="card">FutureAir "Flight Sharing" App Feasibility and Software Requirements Study
             <p>
-              Conducted a thorough feasibility study, explored business use case (BUC) scenarios, and performed requirements specification. See the report <a href="https://docs.google.com/document/d/16MGfPEszyHDZHxKuA8jKvOYGtlpIJubpXLIVvxK5-Es/edit#">here</a>.
+              Conducted a thorough feasibility study, explored business use case (BUC) scenarios, and performed requirements specification. See the report <a href="flightSharingAppStudy.pdf">here</a>.
             </p>
           </div>
         </div>
