--- a/index.html
+++ b/index.html
@@ -38,12 +38,14 @@
 
           </div>
           <div class="main">
-            <p>My name is Shane. I am a software engineer that is knowledgeable in the
+            <p>My name is Shane. I am a software engineer that is proficient in
               requirements gathering, iterative software development, implementation, and testing processes.</p>
             <!-- talk about skills my biology background brings -->
             <h3>Web development</h3>
             <p>I have been designing and implementing web applications for 2 years. I am proficient in JavaScript,
               React JS, Node.js, HTML, CSS and object oriented programming in Java, C# and C.</p>
+            <h3>Bioinformatics</h3>
+            <p>My work experience in bioinformatics has made me skilled at problem-solving and troubleshooting, as things rarely go smoothly in research. I can handle and manipulate large datasets, perform shell scripting, and read and write documentation and academic papers.</p>
           </div>
         </div>
 
