--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
           <div class="main">
             <p>My name is Shane. I am a software engineer that is proficient in
               requirements gathering, iterative software development, implementation, and testing processes.</p>
-            <!-- talk about skills my biology background brings -->
             <h3>Web development</h3>
             <p>I have been designing and implementing web applications for 2 years. I am proficient in JavaScript,
               React JS, Node.js, HTML, CSS and object oriented programming in Java, C# and C.</p>
@@ -51,14 +50,13 @@
 
         <h1 id="education">Education History</h1>
         <ul>
+          <li>B.Sc. Joint Major in Computer Science and Biology</li>
           <li>3.8 GPA (88%)</li>
           <li>Two-time winner of the NSERC Undergraduate Student Research Award</li>
           <li>Dean's Honor Roll - 2017, 2018, 2019, 2020, 2021</li>
           <li>Joseph Goodhead Award, for pioneer work in the field of water pollution</li>
         </ul>
-        <!-- 	<p>put an award art </p> -->
-        <!-- perhaps list relevant courses and grades you got -->
-
+        
         <h1 id="projects">
           Projects
         </h1>
