--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <h1 id="education">Education History</h1>
         <ul>
-          <li>B.Sc. Joint Major in Computer Science and Biology</li>
+          <li>Honors B.Sc. Joint Major in Computer Science and Biology</li>
           <li>3.8 GPA (88%)</li>
           <li>Two-time winner of the NSERC Undergraduate Student Research Award</li>
           <li>Dean's Honor Roll - 2017, 2018, 2019, 2020, 2021</li>
