--- a/index.html
+++ b/index.html
@@ -81,10 +81,11 @@
           <div class="card">JavaScript</div>
           <div class="card">HTML5</div>
           <div class="card">CSS</div>
+          <div class="card">Git</div>
           <div class="card">Java</div>
           <div class="card">C#</div>
           <div class="card">Linux</div>
-          <div class="card">BASH</div>
+          <div class="card">Shell Scripting (BASH)</div>
         </div>
 
         <h1 id="contact-me">
