--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
           Projects
         </h1>
         <div class="cards">
+          <div class="card">Dragon Ball Z Quiz App
+            <p>
+Multi-page web app that quizzes you on DBZ characters. On the response breakdown page it records whether the user entered the correct answer, as well as the actual answer if not. The username user entered at the beginning and their score is added to the database and can be viewed on the high score board!<br>Used PHP and runs from phpMyAdmin.</p>
+          </div>
           <div class="card">"Bucket List" Social Media App
             <p>
               Designed and implemented a "Bucket List" social media web application. App's functionality included registration, login with Google sign-in API, sharing bucket lists, searching for bucket lists and items made public by other people. Used Javascript, PHP, TSQL and CSS.
