--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ Multi-page web app that quizzes you on DBZ characters. On the response breakdown
           </div>
           <div class="card">"Bucket List" Social Media App
             <p>
-              Designed and implemented a "Bucket List" social media web application. App's functionality included registration, login with Google sign-in API, sharing bucket lists, searching for bucket lists and items made public by other people. Used Javascript, PHP, TSQL and CSS.
+              Designed and implemented a "Bucket List" social media web application. App's functionality included registration, login with Google sign-in API, sharing bucket lists, searching for bucket lists and items made public by other people.<br>Used Javascript, PHP, TSQL and CSS.
             </p>
           </div>
           <div class="card">FutureAir "Flight Sharing" App Feasibility and Software Requirements Study
