--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@ Multi-page web app that quizzes you on DBZ characters. On the response breakdown
           <div class="card">JavaScript</div>
           <div class="card">HTML5</div>
           <div class="card">CSS</div>
+          <div class="card">SQL</div>
           <div class="card">PHP</div>
           <div class="card">Git</div>
           <div class="card">Java</div>
