--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               requirements gathering, iterative software development, implementation, and testing processes.</p>
             <h3>Web development</h3>
             <p>I have been designing and implementing web applications for 2 years. I am proficient in JavaScript,
-              React JS, Node.js, HTML, CSS and object oriented programming in Java, C# and C.</p>
+              React JS, HTML, CSS, SQL, and object oriented programming in Java, C# and C.</p>
             <h3>Bioinformatics</h3>
             <p>My work experience in bioinformatics has made me skilled at problem-solving and troubleshooting, as things rarely go smoothly in research. I can handle and manipulate large datasets, perform shell scripting, and read and write documentation and academic papers.</p>
           </div>
