--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <p>I have been designing and implementing web applications for 2 years. I am proficient in JavaScript,
               React JS, HTML, CSS, SQL, and object oriented programming in Java, C# and C.</p>
             <h3>Bioinformatics</h3>
-            <p>My work experience in bioinformatics has made me skilled at problem-solving and troubleshooting, as things rarely go smoothly in research. I can handle and manipulate large datasets, perform shell scripting, and read and write documentation and academic papers.</p>
+            <p>My work experience in bioinformatics has made me skilled at problem-solving and troubleshooting, as things rarely go smoothly in research. I can handle and manipulate large datasets, perform shell scripting, and read and write documentation and academic papers at a high level.</p>
           </div>
         </div>
 
