--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="content">
 
       <div class='header'>
-        <h1>I am Shane. A software engineer.</h1>
+        <h1>I am Shane. A software developer.</h1>
         <a class="email" href="mailto:shanewidanagama@trentu.ca">
           Contact Me</a>
       </div>
@@ -38,7 +38,7 @@
 
           </div>
           <div class="main">
-            <p>My name is Shane. I am a software engineer that is proficient in
+            <p>My name is Shane. I am a software developer that is proficient in
               requirements gathering, iterative software development, implementation, and testing processes.</p>
             <h3>Web development</h3>
             <p>I have been designing and implementing web applications for 2 years. I am proficient in JavaScript,
