--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
             <p>
 Multi-page web app that quizzes you on DBZ characters. On the response breakdown page it records whether the user entered the correct answer, as well as the actual answer if not. The username user entered at the beginning and their score is added to the database and can be viewed on the high score board!<br>Used PHP and runs from phpMyAdmin.</p>
           </div>
-          <div class="card">"Bucket List" Social Media App
+          <div class="card">SimpleParallax.js Tutorial
             <p>
-              Designed and implemented a "Bucket List" social media web application. App's functionality included registration, login with Google sign-in API, sharing bucket lists, searching for bucket lists and items made public by other people.<br>Used Javascript, PHP, TSQL and CSS.
+              A tutorial explaining how to use the simpleParallax.js library to create various parallax effects as the user scrolls through your webpage.<br>Used JavaScript, HTML, CSS. 
             </p>
           </div>
           <div class="card">FutureAir "Flight Sharing" App Feasibility and Software Requirements Study
