--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
           <div class="card">Dragon Ball Z Quiz App
             <p>
 Multi-page web app that quizzes you on DBZ characters. On the response breakdown page it records whether the user entered the correct answer, as well as the actual answer if not. The username user entered at the beginning and their score is added to the database and can be viewed on the high score board!<br>Used PHP and runs from phpMyAdmin.</p>
+          </div>
             <div class="card">Habit Tracker
             <p> A habit tracker web app made using React hooks with create, read, update, delete functionality. </div>
           </div>
