--- a/index.html
+++ b/index.html
@@ -39,10 +39,9 @@
           </div>
           <div class="main">
             <p>My name is Shane. I am a software developer that is proficient in
-              requirements gathering, iterative software development, implementation, and testing processes.</p>
+              requirements gathering, software design, implementation, and testing processes.</p>
             <h3>Web development</h3>
-            <p>I have been designing and implementing web applications for 2 years. I am proficient in JavaScript,
-              React JS, HTML, CSS, SQL, and object oriented programming in Java, C# and C.</p>
+            <p>I have been designing and implementing web applications for 2 years. I am proficient in JavaScript, HTML, CSS and have experience with React, Git, and cross-platform testing</p>
             <h3>Bioinformatics</h3>
             <p>My work experience in bioinformatics has made me skilled at problem-solving and troubleshooting, as things rarely go smoothly in research. I can handle and manipulate large datasets, perform shell scripting, and read and write documentation and academic papers at a high level.</p>
           </div>
@@ -53,7 +52,7 @@
           <li>Honors B.Sc. Joint Major in Computer Science and Biology</li>
           <li>3.8 GPA (88%)</li>
           <li>Two-time winner of the NSERC Undergraduate Student Research Award</li>
-          <li>Dean's Honor Roll - 2017, 2018, 2019, 2020, 2021</li>
+          <li>Courses: Web App Development (94%), Software Design and Modelling (91%), Software Specification and Development (90%), Data Structures and Algorithms (78%), Advanced Algorithms (75%)
           <li>Joseph Goodhead Award, for pioneer work in the field of water pollution</li>
         </ul>
         
@@ -77,7 +76,7 @@ Multi-page web app that quizzes you on DBZ characters. On the response breakdown
             </p>
           </div>
           
-            <div class="card">Habit Tracker
+            <div class="card">React Habit Tracker
             <p> A habit tracker web app made using React hooks with create, read, update, delete functionality. </div>
           </div>
                   </div>
