--- a/index.html
+++ b/index.html
@@ -52,7 +52,14 @@
           <li>Honors B.Sc. Joint Major in Computer Science and Biology</li>
           <li>3.8 GPA (88%)</li>
           <li>Two-time winner of the NSERC Undergraduate Student Research Award</li>
-          <li>Courses: Web App Development (94%), Software Design and Modelling (91%), Software Specification and Development (90%), Data Structures and Algorithms (78%), Advanced Algorithms (75%)
+          <li>Courses 
+            <ul>
+              <li>Web App Development (94%)</li>
+              <li>Software Design and Modelling (91%)</li>
+              <li>Software Specification and Development (90%)</li>
+              <li>Data Structures and Algorithms (78%)</li>
+              <li>Advanced Algorithms (75%)</li>
+            </ul>
           <li>Joseph Goodhead Award, for pioneer work in the field of water pollution</li>
         </ul>
         
