--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
           <li>Honors B.Sc. Joint Major in Computer Science and Biology</li>
           <li>3.8 GPA (88%)</li>
           <li>Two-time winner of the NSERC Undergraduate Student Research Award</li>
-          <li>Courses 
+          <li>Joseph Goodhead Award, for pioneer work in the field of water pollution</li>
+          <li>Courses: 
             <ul>
               <li>Web App Development (94%)</li>
               <li>Software Design and Modelling (91%)</li>
@@ -60,7 +61,6 @@
               <li>Data Structures and Algorithms (78%)</li>
               <li>Advanced Algorithms (75%)</li>
             </ul>
-          <li>Joseph Goodhead Award, for pioneer work in the field of water pollution</li>
         </ul>
         
         <h1 id="projects">
