--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
               A tutorial explaining how to use the simpleParallax.js library to create various parallax effects as the user scrolls through your webpage.<br>Used JavaScript, HTML, CSS. 
             </p>
           </div>
-          <div class="card">Dragon Ball Z Quiz App
+          <div class="card"><a href="https://github.com/shanewidanagama/Dragon-Ball-Z-Quiz-PHP">Dragon Ball Z Quiz App</a>
             <p>
 Multi-page web app that quizzes you on DBZ characters. On the response breakdown page it records whether the user entered the correct answer, as well as the actual answer if not. The username user entered at the beginning and their score is added to the database and can be viewed on the high score board!<br>Used PHP and runs from phpMyAdmin.</p>
           </div>
           
-          <div class="card">FutureAir "Flight Sharing" App Feasibility and Software Requirements Study
+          <div class="card"><a href="flightSharingAppStudy.pdf">FutureAir "Flight Sharing" App Feasibility and Software Requirements Study</a>
             <p>
-              Conducted a thorough feasibility study, explored business use case (BUC) scenarios, and performed requirements specification. See the report <a href="flightSharingAppStudy.pdf">here</a>.
+              Conducted a thorough feasibility study, explored business use case (BUC) scenarios, and performed requirements specification.
             </p>
           </div>
           
