--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <p>My name is Shane. I am a software developer that is proficient in
               requirements gathering, software design, implementation, and testing processes.</p>
             <h3>Web development</h3>
-            <p>I have been designing and implementing web applications for 2 years. I am proficient in JavaScript, HTML, CSS and have experience with React, Git, and cross-platform testing</p>
+            <p>I have been designing and implementing web applications for 2 years. I am proficient in JavaScript, HTML, CSS and have experience with React, Git, and cross-platform testing.</p>
             <h3>Bioinformatics</h3>
             <p>My work experience in bioinformatics has made me skilled at problem-solving and troubleshooting, as things rarely go smoothly in research. I can handle and manipulate large datasets, perform shell scripting, and read and write documentation and academic papers at a high level.</p>
           </div>
