--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h3>Web development</h3>
             <p>I have been designing and implementing web applications for 2 years. I am proficient in JavaScript, HTML, CSS and have experience with React, Git, and cross-platform testing.</p>
             <h3>Bioinformatics</h3>
-            <p>My work experience in bioinformatics has made me skilled at problem-solving and troubleshooting, as things rarely go smoothly in research. I can handle and manipulate large datasets, perform shell scripting, and read and write documentation and academic papers at a high level.</p>
+            <p>My work experience in bioinformatics has made me skilled at problem-solving and troubleshooting, as things rarely go smoothly in research. I can handle and manipulate large datasets, perform shell scripting, and write step-by-step documentation and publication-quality papers</p>
           </div>
         </div>
 
