--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
           </div>
           <div class="main">
             <p>My name is Shane. I am a software developer that is proficient in
-              requirements gathering, software design, implementation, and testing processes.</p>
+              requirements gathering, software design, and implementation</p>
             <h3>Web development</h3>
-            <p>I have been designing and implementing web applications for 2 years. I am proficient in JavaScript, HTML, CSS and have experience with React, Git, and cross-platform testing.</p>
+            <p>I have been designing and implementing web applications for 2 years. I am proficient in JavaScript, HTML, CSS and have experience with React, and Git.</p>
             <h3>Bioinformatics</h3>
             <p>My work experience in bioinformatics has made me skilled at problem-solving and troubleshooting, as things rarely go smoothly in research. I can handle and manipulate large datasets, perform shell scripting, and write step-by-step documentation and publication-quality papers.</p>
           </div>
@@ -79,7 +79,7 @@ Multi-page web app that quizzes you on DBZ characters. On the response breakdown
           
           <div class="card"><a href="flightSharingAppStudy.pdf">FutureAir "Flight Sharing" App Feasibility and Software Requirements Study</a>
             <p>
-              Conducted a thorough feasibility study, explored business use case (BUC) scenarios, and performed requirements specification.
+              Conducted a thorough feasibility study, explored business use case (BUC) scenarios, performed requirements specification, and designed a comprehensive solution.
             </p>
           </div>
           
