--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           Projects
         </h1>
         <div class="cards">
-            <div class="card">SimpleParallax.js Tutorial
+            <div class="card"><a href="https://github.com/shanewidanagama/SimpleParallax.js-explanation">SimpleParallax.js Tutorial</a>
             <p>
               A tutorial explaining how to use the simpleParallax.js library to create various parallax effects as the user scrolls through your webpage.<br>Used JavaScript, HTML, CSS. 
             </p>
