--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@ Multi-page web app that quizzes you on DBZ characters. On the response breakdown
             </p>
           </div>
           
-              <div class="card"><a href="https://github.com/shanewidanagama/DBZ-Character-API">DBZ Encyclopedia API</a>
+              <div class="card"><a href="https://github.com/shanewidanagama/DBZ-Character-REST-API">DBZ Encyclopedia API</a>
             <p>
-              Created a simple DBZ encyclopedia API allows users to access information about their favorite Dragon Ball Z characters. This API can do multiple things. It can list all there is to know about a character. It can tell which alien race your favorite character belongs to. It can even tell you who's stronger than who!<br>Used PHP, HTML, and CSS.
+              Created a REST API that allows users to access information about their favorite Dragon Ball Z characters. This API can do multiple things. It can list all there is to know about a character. It can tell which alien race your favorite character belongs to. It can even tell you who's stronger than who!<br>Used PHP, HTML, and CSS.
             </p>
           </div>
           
