--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="row">
 
           <div class="side">
-            <img src="https://images.squarespace-cdn.com/content/v1/56c57049356fb0f6e040db40/1587038214587-FODY63YTGRDDO7EAOLW4/Shane.jpg?format=500w" alt="profile pic">
+            <img src="img/profile-pic.jpg" alt="profile pic">
 
           </div>
           <div class="main">
