--- a/index.html
+++ b/index.html
@@ -66,23 +66,23 @@
         Projects
       </h1>
       <div class="cards">
-        <div class="card"><a href="https://github.com/shanewidanagama/SimpleParallax.js-explanation">SimpleParallax.js Tutorial</a>
+        <div class="card" id="simple-parallax"><a href="https://github.com/shanewidanagama/SimpleParallax.js-explanation">SimpleParallax.js Tutorial</a>
           <p>
             A tutorial explaining how to use the simpleParallax.js library to create various parallax effects as the user scrolls through your webpage.<br>Used JavaScript, HTML, CSS.
           </p>
         </div>
-        <div class="card"><a href="https://github.com/shanewidanagama/Dragon-Ball-Z-Quiz-PHP">Dragon Ball Z Quiz App</a>
+        <div class="card" id="dbz-quiz"><a href="https://github.com/shanewidanagama/Dragon-Ball-Z-Quiz-PHP">Dragon Ball Z Quiz App</a>
           <p>
             Multi-page web app that quizzes you on DBZ characters. On the response breakdown page it records whether the user entered the correct answer, as well as the actual answer if not. The username user entered at the beginning and their score is added to the database and can be viewed on the high score board!<br>Used PHP and runs from phpMyAdmin.</p>
         </div>
 
-        <div class="card"><a href="flightSharingAppStudy.pdf">FutureAir "Flight Sharing" App Feasibility and Software Requirements Study</a>
+        <div class="card" id="app-study"><a href="flightSharingAppStudy.pdf">FutureAir "Flight Sharing" App Feasibility and Software Requirements Study</a>
           <p>
             Conducted a thorough feasibility study, explored business use case (BUC) scenarios, performed requirements specification, and designed a comprehensive solution.
           </p>
         </div>
 
-        <div class="card"><a href="https://github.com/shanewidanagama/DBZ-Character-REST-API">DBZ Encyclopedia API</a>
+        <div class="card" id="dbz-api"><a href="https://github.com/shanewidanagama/DBZ-Character-REST-API">DBZ Encyclopedia API</a>
           <p>
             Created a REST API that allows users to access information about their favorite Dragon Ball Z characters. This API can do multiple things. It can list all there is to know about a character. It can tell which alien race your favorite character belongs to. It can even tell you who's stronger than who!<br>Used PHP, HTML, and CSS.
           </p>
@@ -99,16 +99,18 @@
       </h1>
 
       <div class="cards">
-        <div class="card">JavaScript</div>
-        <div class="card">HTML5</div>
-        <div class="card">CSS</div>
-        <div class="card">SQL</div>
-        <div class="card">PHP</div>
-        <div class="card">Git</div>
-        <div class="card">Java</div>
-        <div class="card">C#</div>
-        <div class="card">Linux</div>
-        <div class="card">Shell Scripting (BASH)</div>
+        <div class="card">JavaScript - 1 year</div>
+        <div class="card">HTML5 - 1 year</div>
+        <div class="card">CSS - 1 year</div>
+        <div class="card">MySQL - 1 year</div>
+        <div class="card">PHP - 1 year</div>
+        <div class="card">Git - 1 year</div>
+        <div class="card">React - Less than 1 year</div>
+        <div class="card">Java - 2 years</div>
+        <div class="card">C# - 1 year</div>
+        <div class="card">Linux CLI - 2 year</div>
+        <div class="card">Shell Scripting (BASH) - 2 years</div>
+        <div class="card">Communicating Technical Info - 3 years</div>
       </div>
 
       <h1 id="contact-me">
