--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <div id="navbar">
+    <div id="navbar" class="sticky">
       <a href="#about-me">About Me</a>
       <a href="#education">Education</a>
       <a href="#projects">Projects</a>
