did a color swap and added text shadows

--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@
 
         </div>
         <div class="main">
-          <p>My name is Shane. I am a software developer that is proficient in
-            requirements gathering, software design, and implementation</p>
+          <p>My name is Shane. I'm a software developer with experience building websites and single-page applications.</p>
           <h3>Web development</h3>
-          <p>I have been designing and implementing web applications for 2 years. I am proficient in JavaScript, HTML, CSS and have experience with React, and Git.</p>
+          <p>I have been designing and implementing web applications for almost 2 years. I am proficient in JavaScript, HTML, CSS and have experience with Java, C#, and Git version control.</p>
           <h3>Bioinformatics</h3>
           <p>My work experience in bioinformatics has made me skilled at problem-solving and troubleshooting, as things rarely go smoothly in research. I can handle and manipulate large datasets, perform shell scripting, and write step-by-step documentation and publication-quality papers.</p>
         </div>
