--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="row">
 
         <div class="side">
-          <img src="img/profile-pic.jpg" alt="profile pic">
+          <img class="profile-pic" src="img/profile-pic.jpg" alt="profile pic">
 
         </div>
         <div class="main">
